@@ -1,3 +1,7 @@
+2011-09-25  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/tree-ssa/restrict2.C: New test.
+
 2011-09-25  Ira Rosen  <ira.rosen@linaro.org>
 
 	* lib/target-supports.exp (check_effective_target_vect64): New.
