@@ -1,3 +1,9 @@
+2011-09-25  Jakub Jelinek  <jakub@redhat.com>
+
+	* tree-ssa-structalias.c (intra_create_variable_infos): Treat
+	TYPE_RESTRICT REFERENCE_TYPE parameters like restricted
+	DECL_BY_REFERENCE parameters.
+
 2011-09-25  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* tree-eh.c (cleanup_empty_eh): Allow a call to __builtin_stack_restore
